feat: Adds other endpoints, adds job expiration
